tests/invalid/DefiniteAssign_Invalid_4.whiley
method f(any _this) :
    skip

method g() :
    f(x)
